crates/reinhardt-db-macros/tests/ui/fail/unsupported_backend.rs
use reinhardt_db_macros::document;

#[document(collection = "users", backend = "postgres")]
struct User {
    #[field(primary_key)]
    id: String,
}

fn main() {}
