crates/reinhardt-db-macros/tests/ui/fail/unsupported_backend.stderr
error: unsupported backend `postgres`, expected `mongodb`
 --> tests/ui/fail/unsupported_backend.rs:3:1
  |
3 | #[document(collection = "users", backend = "postgres")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `document` (in Nightly builds, run with -Z macro-backtrace for more info)
